Fix animation bug overlaping next section in Firefox

--- a/src/scss/sections/catalog-section.scss
+++ b/src/scss/sections/catalog-section.scss
@@ -1,4 +1,6 @@
 .section.catalog-section {
+  background-color: $color-white;
+
   .content-wrapper {
     width: 40%;
     padding: 0 0 0 20px;
